Fixed overflow issue of the mobile info page.

--- a/public/javascripts/SVValidate/mobile/mobileValidate.css
+++ b/public/javascripts/SVValidate/mobile/mobileValidate.css
@@ -101,11 +101,11 @@ html {
     position: absolute;
     min-height: 480px;
     border: 5px solid black;
-
     border-radius: 3px 3px 3px 3px;
     z-index: 4;
     -webkit-border-radius: 3px 3px 3px 3px;
     -moz-border-radius: 3px 3px 3px 3px;
+    overflow: auto;
 }
 
 #modal-info-background {
@@ -172,10 +172,6 @@ html {
 
 #ps-logo-landscape {
     width: 350px;
-}
-
-.status-box {
-    height: 500px;
 }
 
 #status-current-mission-completion-bar {
